feat: Add intrinsic properties and initial value handling in GameProperty; update related classes for improved state management